--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,105 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+ <div class="full">
+  <section id="banner" class="topbanner">
+    <div id="boxes">
+      <div class="small-box mountains" rel="mountains">
+        <div>
+          <a href="http://en.wikipedia.org/wiki/Derwentwater" target="_blank" class="lakes-visible">
+            <span>Derwentwater</span>
+            <img src="https://images.pexels.com/photos/3281020/pexels-photo-3281020.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
+          </a>
+          <a href="http://en.wikipedia.org/wiki/Black_forest" target="_blank" class="forests-visible">
+            <span>Black Forest</span>
+            <img src="https://images.unsplash.com/photo-1528629297340-d1d466945dc5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1995&q=80" />
+          </a>
+          <a href="http://en.wikipedia.org/wiki/The_Maldives" target="_blank" class="beaches-visible">
+            <span>The Maldives</span>
+            <img src="http://www.savorypixel.com/678799/beaches/maldives.jpg" />
+          </a>
+          <a class="mountains-visible original">
+            <span>Mountains</span>
+          </a>
+        </div>
+      </div>
+      <div class="small-box lakes" rel="lakes">
+        <div>
+          <a href="http://en.wikipedia.org/wiki/Lhotse" target="_blank" class="mountains-visible">
+            <span>Lhotse</span>
+            <img src="http://www.savorypixel.com/678799/mountains/lhotse.jpg" />
+          </a>
+          <a href="http://en.wikipedia.org/wiki/Sagano_Bamboo_Forest" target="_blank" class="forests-visible">
+            <span>Sagano Bamboo Forest</span>
+            <img src="http://www.savorypixel.com/678799/forests/sagano-bamboo-forest.jpg" />
+          </a>
+          <a href="http://en.wikipedia.org/wiki/Lanikai_Beach" target="_blank" class="beaches-visible">
+            <span>Lanikai Beach</span>
+            <img src="http://www.savorypixel.com/678799/beaches/lanikai-beach.jpg" />
+          </a>
+          <a class="lakes-visible original">
+            <span>Lakes</span>
+          </a>
+        </div>
+      </div>
+      <div class="small-box forests" rel="forests">
+        <div>
+          <a href="http://en.wikipedia.org/wiki/Kanchenjunga" target="_blank" class="mountains-visible">
+            <span>Kanchenjunga</span>
+            <img src="http://www.savorypixel.com/678799/mountains/kanchenjunga.jpg" />
+          </a>
+          <a href="http://en.wikipedia.org/wiki/Lake_tahoe" target="_blank" class="lakes-visible">
+            <span>Lake Tahoe</span>
+            <img src="http://www.savorypixel.com/678799/lakes/lake-tahoe.jpg" />
+          </a>
+          <a href="http://en.wikipedia.org/wiki/Hampton_Beach" target="_blank" class="beaches-visible">
+            <span>Hampton Beach</span>
+            <img src="http://www.savorypixel.com/678799/beaches/hampton-beach.jpg" />
+          </a>
+          <a class="forests-visible original">
+            <span>Forests</span>
+          </a>
+        </div>
+      </div>
+      <div class="small-box beaches" rel="beaches">
+        <div>
+          <a href="http://en.wikipedia.org/wiki/Mount_everest" target="_blank" class="mountains-visible">
+            <span>Mount Everest</span>
+            <img src="http://www.savorypixel.com/678799/mountains/everest.jpg" />
+          </a>
+          <a href="http://en.wikipedia.org/wiki/Maligne_lake" target="_blank" class="lakes-visible">
+            <span>Maligne Lake</span>
+            <img src="http://www.savorypixel.com/678799/lakes/maligne-lake.jpg" />
+          </a>
+          <a href="http://en.wikipedia.org/wiki/Sequoia_National_Forest" target="_blank" class="forests-visible">
+            <span>Sequoia National Forest</span>
+            <img src="http://www.savorypixel.com/678799/forests/sequoia-forest.jpg" />
+          </a>
+          <a class="beaches-visible original">
+            <span>Beaches</span>
+          </a>
+        </div>
+      </div>
+      <div class="big-box">
+        <div>
+          <a href="http://en.wikipedia.org/wiki/Bora_bora" target="_blank" class="beaches-visible">
+            <span>Bora Bora</span>
+            <img src="http://www.savorypixel.com/678799/beaches/bora-bora.jpg" />
+          </a>
+          <a href="http://en.wikipedia.org/wiki/Amazon_rainforest" target="_blank" class="forests-visible">
+            <span>Amazon Rainforest</span>
+            <img src="http://www.savorypixel.com/678799/forests/amazon.jpg" />
+          </a>
+          <a href="http://en.wikipedia.org/wiki/Lake_Lucerne" target="_blank" class="lakes-visible">
+            <span>Lake Lucerne</span>
+            <img src="http://www.savorypixel.com/678799/lakes/lake-lucerne.jpg" />
+          </a>
+          <a href="http://en.wikipedia.org/wiki/K2" target="_blank" class="mountains-visible">
+            <span>K2</span>
+            <img src="http://www.savorypixel.com/678799/mountains/k2.jpg" />
+          </a>
+          <a class="original">
+            <img src="http://www.savorypixel.com/678799/beautiful-earth.jpg" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
