main categories icons added to homepage completed

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,4 +13,18 @@
 
 .nav-link {
   color:white !important;
+  margin-right: 20px !important;
+}
+
+.nav-link:hover {
+  color: $primary-green !important;
+  font-size: 1.1rem !important;
+}
+
+.nav-link-sell {
+  color: $primary-green !important;
+}
+
+.navbar {
+  padding: 10px 30px;
 }
