--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,11 +11,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Home", "#", class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Messages", "#", class: "nav-link" %>
+       <li class="nav-item">
+          <%= link_to "Browse", "#", class: "nav-link" %>
+        </li> <li class="nav-item">
+          <%= link_to "Who we are", "#", class: "nav-link" %>
+        </li> <li class="nav-item">
+          <%= link_to "Help", "#", class: "nav-link" %>
+        </li> <li class="nav-item">
+          <%= link_to "Sell", "#", class: "nav-link nav-link-sell" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
